# hsudoku

./: .gitignore  .travis.yml  LICENSE  README.md  hsudoku.cabal
gui/: .theme.css.swp  hsudoku.ui  theme.css
src/: .GtkUtils.hs.swp  .Hsudoku.hs.swp  .Util.hs.swp  GtkUtils.hs  Hsudoku.hs  UserInterface.hs  Util.hs  hsudoku.ui
src/Sudoku/: .Solver.hs.swp  Loader.hs  Solver.hs  Type.hs
test/: TestData.hs  Travis.hs  UserInterfaceSpec.hs  UtilSpec.hs
test/Sudoku/: LoaderSpec.hs  SolverSpec.hs  TypeSpec.hs
