-- The name of the package.
name:                hsudoku

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Sudoku game written in haskell 

-- The license under which the package is released.
license:             MIT
license-file:        LICENSE

-- The package author(s).
author:              Marcel Moosbrugger

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          marcelmoosbrugger@gmail.com

category:            Game

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:     Util
                     , UserInterface
                     , Sudoku.Type
                     , Sudoku.Solver
                     , Sudoku.Loader

    
  build-depends:       base >=4.9 && <4.10
                     , text >=1.2 && <1.3
                     , HandsomeSoup>=0.4 && <0.5
                     , hxt>=9.3 && <9.4
                     , haskell-gi-base>=0.20 && <0.21
                     , gi-gtk>=3.0 && <3.1
  
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, OverloadedLabels

executable hsudoku
  ghc-options:         -threaded
  -- .hs or .lhs file containing the Main module.
  main-is:             Hsudoku.hs
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <4.10
                     , text >=1.2 && <1.3
                     , HandsomeSoup>=0.4 && <0.5
                     , hxt>=9.3 && <9.4
                     , haskell-gi-base>=0.20 && <0.21
                     , gi-gtk>=3.0 && <3.1
                     , hsudoku

  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, OverloadedLabels

test-suite spec
   type:                exitcode-stdio-1.0
   ghc-options:         -Wall
   main-is:             Spec.hs
   hs-source-dirs:      test
   
   build-depends:       base >=4.9 && <4.10
                      , text >=1.2 && <1.3
                      , HandsomeSoup>=0.4 && <0.5
                      , hxt>=9.3 && <9.4
                      , haskell-gi-base>=0.20 && <0.21
                      , gi-gtk>=3.0 && <3.1
                      , hspec>=2.4 && <2.5
                      , hsudoku

  other-modules:        UtilSpec
                      , UserInterfaceSpec
                      , Sudoku.TypeSpec
                      , Sudoku.SolverSpec
                      , Sudoku.LoaderSpec

  default-language:    Haskell2010
