name:               hsudoku
version:            0.1.0.0
synopsis:           Sudoku game with a GTK3 interface
description:        This package realizes a graphical GTK3 sudoku game. Moreover it
                    provides modules for loading and solving sudoku grids.

license:            MIT
license-file:       LICENSE
author:             Marcel Moosbrugger
maintainer:         marcelmoosbrugger@gmail.com
category:           Game
homepage:           https://github.com/marcelmoosbrugger/hsudoku
bug-reports:        https://github.com/marcelmoosbrugger/hsudoku/issues
build-type:         Simple
cabal-version:      >=1.10

source-repository head
    type:           git
    location:       git@github.com:marcelmoosbrugger/hsudoku.git   

library
  hs-source-dirs:      src

  exposed-modules:     Util
                     , UserInterface
                     , Sudoku.Type
                     , Sudoku.Solver
                     , Sudoku.Loader

    
  build-depends:       base >=4.9 && <4.10
                     , text >=1.2 && <1.3
                     , bytestring>=0.10 && <0.11
                     , http-client>=0.5 && <0.6
                     , http-client-tls>= 0.3 && <0.4
                     , HandsomeSoup>=0.4 && <0.5
                     , hxt>=9.3 && <9.4
                     , haskell-gi-base>=0.20 && <0.21
                     , gi-gtk>=3.0 && <3.1
  
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, OverloadedLabels

executable hsudoku
  ghc-options:         -threaded
  main-is:             Hsudoku.hs
  build-depends:       base >=4.9 && <4.10
                     , text >=1.2 && <1.3
                     , bytestring>=0.10 && <0.11
                     , http-client>=0.5 && <0.6
                     , http-client-tls>= 0.3 && <0.4
                     , HandsomeSoup>=0.4 && <0.5
                     , hxt>=9.3 && <9.4
                     , haskell-gi-base>=0.20 && <0.21
                     , gi-gtk>=3.0 && <3.1
                     , hsudoku

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, OverloadedLabels

test-suite spec
   type:                exitcode-stdio-1.0
   ghc-options:         -Wall
   main-is:             Spec.hs
   hs-source-dirs:      test
   build-depends:       base >=4.9 && <4.10
                      , text >=1.2 && <1.3
                      , bytestring>=0.10 && <0.11
                      , http-client>=0.5 && <0.6
                      , http-client-tls>= 0.3 && <0.4
                      , HandsomeSoup>=0.4 && <0.5
                      , hxt>=9.3 && <9.4
                      , haskell-gi-base>=0.20 && <0.21
                      , gi-gtk>=3.0 && <3.1
                      , hspec>=2.4 && <2.5
                      , QuickCheck>=2.9 && <2.10
                      , hsudoku

  other-modules:        UtilSpec
                      , UserInterfaceSpec
                      , Sudoku.TypeSpec
                      , Sudoku.SolverSpec
                      , Sudoku.LoaderSpec
                      , TestData

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, OverloadedLabels
